<resources>
    <string name="app_name" translatable="false">RuRu Truck</string>
    <string name="api_key" translatable="false">AIzaSyC-dCS93_UvqBmD1MWGV2431qWad-2bOVs</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="continues">Continue</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="bid">Bid</string>
    <string name="getstarted">Get Started</string>
    <string name="onet">Delivering your cargo with care</string>
    <string name="onest">Valuable cargo, so you take great care in handling</string>
    <string name="twot">Moving you forward, one load at a time</string>
    <string name="twost">Reach new markets, or simply meet their customers</string>
    <string name="treet">Driving your bottom line forward.</string>
    <string name="treest">Helping them achieve these goals through efficient</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="let_s_login_continues">Let’s login for explore continues</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="getting_started">Getting Started!</string>
    <string name="seems_you_profile">Seems you are new here, Let’s set up your profile.</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="referral_code">Referral code</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="country_code">Code</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="subtitle_otp">Your new password must be different from previous password.</string>
    <string name="resend_code">Resend code?</string>
    <string name="verify_account">Verify Account</string>
    <string name="my_load">My Loads</string>
    <string name="booked_lorries">Booked Lorries</string>
    <string name="profile">Profile</string>

    <string name="vehicle_type">Vehicle Type</string>
    <string name="pickup_point">Pickup Point</string>
    <string name="drop_point">Drop Point</string>
    <string name="type_of_weight">Number of tonnes</string>
    <string name="description">Description</string>
    <string name="select_vehicle">Select Vehicle</string>
    <string name="amount">Amount</string>
    <string name="what_s_your_expected_price">What’s your expected price?</string>
    <string name="per_tonnes">Per Tonnes?</string>
    <string name="my_loads">My Loads</string>
    <string name="load">Load</string>
    <string name="unload">Unload</string>
    <string name="mycurrentloads">My Current Loads</string>
    <string name="completed">Completed</string>
    <string name="pickup">Pickup</string>
    <string name="date">Date</string>
    <string name="tonnes">Tonnes</string>
    <string name="material">Material</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="accept_amp_pay"><![CDATA[Accept & Pay]]></string>
    <string name="payment_information">Payment Information</string>
    <string name="payment_gateway">Payment Gateway</string>
    <string name="transaction_id">Transaction ID</string>
    <string name="sub_total">Sub Total</string>
    <string name="wallet">Wallet</string>
    <string name="earning">Earning</string>
    <string name="total_payment">Total payment</string>
    <string name="date_of_joining">Date of Joining</string>
    <string name="lorry">Lorry</string>
    <string name="total_review">Total review</string>
    <string name="search">Search</string>
    <string name="select_vehicle_ty">Select Vehicle type for your load</string>
    <string name="booked_loads">Booked Loads</string>
    <string name="offer">Offer</string>
    <string name="lorry_owner_response">Load Owner Response</string>
    <string name="cancellation_policy">Cancellation Policy</string>
    <string name="bid_now">Bid Now</string>
    <string name="enter_your_price">Enter your price</string>
    <string name="send_offer">Send Offer</string>
    <string name="no_lord_placed_curr">No Load placed! Currently you don’t have any Loads.</string>
    <string name="proceed">Proceed</string>
    <string name="update">Update</string>
    <string name="fix">Fix</string>
    <string name="haven_t_uploaded_yet">Haven\'t uploaded yet</string>
    <string name="uploaded_successfully">Selected Successfully</string>
    <string name="upload">Upload</string>
    <string name="find_loads">Find Loads</string>
    <string name="near_load">Near Load</string>
    <string name="attach_lorry">Attach Lorry</string>
    <string name="my_lorry_s">My Lorry\'s</string>
    <string name="select_lorry">Select Lorry</string>
    <string name="availability_status">Availability Status</string>
    <string name="enter_lorry_number">Enter Lorry Number</string>
    <string name="add_lorry">Add Lorry</string>
    <string name="select_route">Select Route</string>
    <string name="route">Route</string>
    <string name="vehicle_info">Vehicle Info</string>
    <string name="rc_verified">RC Verified</string>
    <string name="rc_verifiednot">RC Verification Pending</string>
    <string name="routes">Routes</string>
    <string name="info">Info</string>
    <string name="drop">Drop</string>
    <string name="enter_your_feedback">Enter your feedback</string>
    <string name="rate_to">Rate to</string>
    <string name="payout_request">Payout Request</string>
    <string name="enter_your_amount">Enter your amount</string>
    <string name="cancel">Cancel</string>
    <string name="account_holder_name">Account holder name</string>
    <string name="bank_name">Bank name</string>
    <string name="account_number">Account number</string>
    <string name="account_ifsc">Account IFSC</string>
    <string name="upi">UPI</string>
    <string name="paypal_id">Paypal Id</string>
    <string name="notification">Notification</string>
    <string name="routs">Routs</string>
    <string name="immediately_available">Immediately Available</string>
    <string name="available">Available</string>
    <string name="required_to_msg">You are required to must upload both documents after the submit button appeared</string>
    <string name="note">Note</string>
    <string name="operating_routes">Operating Routes</string>
    <string name="review">Review</string>
    <string name="transport_information">Transport Information</string>
    <string name="withdraw_limit">Withdraw Limit</string>
    <string name="total_earning">Total Earning</string>
    <string name="request">Request</string>
    <string name="request_date">Request Date</string>
    <string name="pay_by">Pay by</string>
    <string name="payout_id">Payout Id</string>
    <string name="proof">Proof</string>
    <string name="logout">Logout</string>
    <string name="language">Language</string>
    <string name="hello">Hello..</string>
    <string name="home">Home</string>
    <string name="post_your_truck_and_get_loads">Post your truck and get loads</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="e_wallet">E-Wallet</string>
    <string name="transaction_history">Transaction History</string>
    <string name="contact_details">Contact Details</string>
</resources>