<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/toprounded">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5sp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="3dp"
                android:singleLine="true"
                android:text="@string/payout_request"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:padding="1dp"
                android:text="@string/enter_your_amount"

                />

            <EditText
                android:id="@+id/ed_amount"
                style="@style/AppTheme.input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:inputType="number"
                android:padding="10dp" />

            <RadioGroup
                android:id="@+id/radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="upi" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="bank transfer" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="paypal" />

            </RadioGroup>


            <EditText
                android:id="@+id/ed_bankname"
                style="@style/AppTheme.input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/bank_name"
                android:padding="10dp"
                android:textSize="14dp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/ed_accountno"
                style="@style/AppTheme.input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:inputType="number"
                android:hint="@string/account_number"
                android:padding="10dp"
                android:textSize="14dp"
                android:visibility="gone" />


            <EditText
                android:id="@+id/ed_accountname"
                style="@style/AppTheme.input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:padding="10dp"
                android:hint="@string/account_holder_name"
                android:textSize="14dp"

                android:visibility="gone" />


            <EditText
                android:id="@+id/ed_accountifsc"
                style="@style/AppTheme.input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:padding="10dp"
                android:textSize="14dp"
                android:hint="@string/account_ifsc"

                android:visibility="gone" />


            <EditText
                android:id="@+id/ed_accountupi"
                style="@style/AppTheme.input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:padding="10dp"
                android:hint="@string/upi"
                android:textSize="14dp"


                android:visibility="gone" />


            <EditText
                android:id="@+id/ed_accountpaypal"
                style="@style/AppTheme.input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:hint="@string/paypal_id"
                android:layout_marginEnd="10dp"
                android:padding="10dp"
                android:textSize="14dp"


                android:visibility="gone" />

            <View
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center"
                android:padding="5dp">

                <TextView
                    android:id="@+id/txt_reject"
                    style="@style/AppTheme.Button"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_button_emty"
                    android:text="@string/cancel"
                    android:textColor="@color/teal_700"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/btn_submit"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_weight="1"
                    android:background="#26A8FA"
                    android:gravity="center"
                    android:text="@string/proceed"
                    android:textColor="@color/white"
                    android:theme="@style/AppTheme.Button" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="50dp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>







