<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:background="@drawable/toprounded"
    android:orientation="vertical"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <View
            android:layout_width="80dp"
            android:layout_height="3dp"
            android:layout_marginTop="3dp"
            android:background="@color/gray0" />

        <TextView
            style="@style/Font"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|start"
            android:padding="5dp"
            android:text="@string/bid_now"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="10dp"
            android:background="@color/gray0" />

        <TextView
            style="@style/Font"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|start"
            android:padding="5dp"
            android:text="@string/enter_your_price"
            android:textColor="@color/black"
            android:textSize="16dp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_round_box"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/ed_amount"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:backgroundTint="@android:color/transparent"
                android:drawableStart="@drawable/ic_money"
                android:drawablePadding="10dp"
                android:hint="@string/amount"
                android:inputType="number"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <Switch
                android:id="@+id/swichtonne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fix" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <TextView
            style="@style/Font"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|start"
            android:padding="5dp"
            android:text="@string/description"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp" />
        <EditText
            android:id="@+id/ed_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_round_box"
            android:minLines="5"
            android:gravity="start"
            android:padding="15dp"
             />

        <View
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <TextView
            android:id="@+id/btn_sendoffer"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/rounded_button"
            android:gravity="center"
            android:text="@string/send_offer"
            android:textColor="@color/white"
            android:textSize="14dp"
            android:textStyle="bold" />


        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />
    </LinearLayout>


</LinearLayout>