<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/vpPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="MissingConstraints">


        </androidx.viewpager.widget.ViewPager>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/flexibleIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:background="#00FFFFFF"
            app:tabBackground="@drawable/default_dot"
            app:tabIndicator="@drawable/tab_selector"
            app:tabIndicatorColor="@color/purple_700"
            app:tabIndicatorGravity="center"
            app:tabIndicatorHeight="6dp" />

        <TextView
            android:id="@+id/btn_skip"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/rounded_button"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/skip"
            android:textColor="@color/white"
            android:textSize="14dp"
            android:textStyle="bold" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="-10dp"
        android:animateLayoutChanges="true"
        android:background="@drawable/toprounded"
        android:gravity="center"
        android:minHeight="220dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="-10dp"
            android:layout_weight="4.5"
            android:orientation="vertical">


            <TextView
                android:id="@+id/txt_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/onet"
                android:textColor="@color/black"
                android:textSize="24dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_subtitle"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/onest"
                android:textSize="14dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/btn_next"
            style="@style/AppTheme.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"

            android:background="@drawable/rounded_button"
            android:gravity="center"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="30dp" />

    </LinearLayout>


</LinearLayout>